@@ -1,3 +1,8 @@
+Wed Aug 18 09:26:04 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * netsvcs/lib/Client_Logging_Handler.cpp:
+          Fixed a compile warning.
+
 Tue Aug 17 07:34:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * ace/CDR_Stream.cpp
